@@ -14,5 +14,6 @@ extern void dfsch__wrapper_native_register(dfsch_object_t *ctx);
 extern void dfsch__weak_native_register(dfsch_object_t *ctx);
 extern void dfsch__format_native_register(dfsch_object_t *ctx);
 extern void dfsch__port_native_register(dfsch_object_t *ctx);
+extern void dfsch__platform_register(dfsch_object_t *ctx);
 
 #endif
